--- a/reg.html
+++ b/reg.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: sans-serif;
-      background: linear-gradient(to right, #e0eafc, #cfdef3);
+      background: #d4b5ce;
       margin: 0;
       padding: 20px;
     }
@@ -55,11 +55,11 @@
     }
 
     input[type="submit"] {
-      background-color: #28a745;
+      background-color: #e44ca2;
     }
 
     input[type="reset"] {
-      background-color: #dc3545;
+      background-color: #4caae4;
     }
 
    
@@ -110,3 +110,4 @@
 
 </body>
 </html>
+
