--- a/reg.html
+++ b/reg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>College Event Registration</title>
+  <title>INVA Event Registration</title>
   <style>
     body {
       font-family: sans-serif;
@@ -110,4 +110,5 @@
 
 </body>
 </html>
+
 
